--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,7 +1,25 @@
 <title>Data Viz</title>
-
+<script
+  src="https://code.jquery.com/jquery-3.5.1.min.js"
+  integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+  crossorigin="anonymous"
+></script>
 <form enctype="multipart/form-data" action="/upload/image" method="post">
   <input id="zip-file" type="file" name="zipfile" />
 </form>
+
+<style>
+  .links line {
+    stroke: #aaa;
+  }
+
+  .nodes circle {
+    pointer-events: all;
+    stroke: none;
+    stroke-width: 40px;
+  }
+</style>
+<svg width="1000" height="1000"></svg>
+<script src="https://d3js.org/d3.v4.min.js"></script>
 
 <script type="text/javascript" src="{{ url_for('static', filename = 'index.js') }}"></script>
