--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,4 +22,7 @@
 <svg width="1000" height="1000"></svg>
 <script src="https://d3js.org/d3.v4.min.js"></script>
 
-<script type="text/javascript" src="{{ url_for('static', filename = 'index.js') }}"></script>
+<script
+  type="text/javascript"
+  src="{{ url_for('static', filename = 'index.js') }}"
+></script>
